# multiplatform

em/: em_build.sh
glfw_test/: CMakeLists.txt  bs_run.sh
glfw_test/src/: main.cpp
